--- a/Flipkart/mystyle.css
+++ b/Flipkart/mystyle.css
@@ -81,7 +81,7 @@ margin-bottom: 20px;
 }
 .box1{
     
-    background:url(//img1a.flixcart.com/www/linchpin/fk-cp-zion/img/login_img_dec4bf.png);
+    background:url(images/login.png);
     height: 100vh;
     background-position:center;
     background-repeat: no-repeat;
